title overflow fix

--- a/style.css
+++ b/style.css
@@ -104,6 +104,8 @@ body {
 .section h2 {
     text-align: center;
     margin: 1em auto;
+    word-break: break-all;
+    max-width: 50vw;
 }
 
 .bar {
@@ -481,7 +483,9 @@ form label {
         letter-spacing: -35pt;
         transform: none;
     }
-
+    .section h2 {
+        max-width: 40vw;
+    }
     .description {
         grid-template-columns: 1fr;
     }
@@ -525,6 +529,6 @@ form label {
     }
 
     form {
-        width: 100%;
+        width: 90%;
     }
 }
